Fix richtext ul display when next to left-aligned images

--- a/uubloomington/uubloomington/static/css/uubloomington.css
+++ b/uubloomington/uubloomington/static/css/uubloomington.css
@@ -338,6 +338,9 @@ article > ul {
     list-style-position: outside;
     padding-left: 1rem;
 }
+.left ~ ul {
+    overflow: hidden;
+}
 
 .post {
     padding: 0.75rem;
